<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trace</string>

    <!-- Welcome screen -->
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="new_to_trace">New to Trace?</string>
    <string name="email">email address</string>
    <string name="username">name</string>
    <string name="password">password</string>
    <string name="password_again">password again</string>
    <string name="error_intro">"please "</string>
    <string name="error_blank_email">enter a email</string>
    <string name="error_blank_name">enter a name</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">logging you in&#8230;</string>
    <string name="progress_sign_up">signing you up&#8230;</string>

    <!-- Titles -->
    <string name="profile">Profile</string>
    <string name="draw">Draw</string>
    <string name="walk">Walk</string>
    <string name="choose_duration">Choose Duration</string>
    <string name="choose_distance">Choose Distance</string>
    <string name="choose_drawing">Choose Drawing</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="map">Map</string>
    <string name="send">Send</string>

    <!--Actions -->
    <string name="clear">Clear</string>
    <string name="annotate">Annotate</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="home">&lt; Home</string>
    <string name="log_out">Log out</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="settings">Settings</string>
    <string name="less_than">&lt;&lt;</string>
    <string name="greater_than">&gt;&gt;</string>
    <string name="touch_to_annotate">Touch Line to Annotate</string>

    <!-- Other -->
    <string name="toast_draw_larger">please draw larger</string>
    <string name="toast_draw_something">please draw something</string>
    <string name="toast_enter_annotation">empty message is not allowed</string>
    <string name="hint_enter_username">username, separate with comma</string>
    <string name="hint_enter_description">name your drawing here</string>
    <string name="toast_enter_username">please enter username</string>
    <string name="toast_enter_description">Please name your drawing</string>
    <string name="toast_success">success!</string>
    <string name="progress_sending">sending data</string>
    <string name="progress_retrieving">retrieving data</string>
    <string name="toast_network_error">network error, please try again</string>
    <string name="toast_invalid_username">invalid username:</string>
    <string name="draw_by">Draw by</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="empty_traces">You do not have any traces yet</string>
    <string name="message">Message</string>
    <string name="location_service_disabled">Location service disabled</string>
    <string name="network_service_disabled">Network service disabled</string>
    <string name="enable_gps">Trace needs access to your location. Please turn on location access.</string>
    <string name="enable_network">Trace needs access to network. Please check network connection.</string>
    <string name="miles_traveled">miles traveled</string>
    <string name="ending_early">End walk</string>
    <string name="show_drawing">Show drawing</string>
    <string name="show_trace">Show trace</string>
    <string name="please_wait">please wait...</string>
    <string name="google_play_required">Google play service required</string>
    <string name="enable_google_play">Trace needs access to Google play service. Please check if you installed latest version of Google play service.</string>
    <string name="connection_failed">Google play service connection failed</string>
    <string name="trace_success">Trace success!</string>
    <string name="trace_success_message">Congratulations, you finished a trace!</string>
    <string name="resume">&lt; Resume</string>
    <string name="no_trace">you did not leave any trace yet</string>
    <string name="hint_enter_annotation">enter annotation here</string>
    <string name="report_problem">Report a problem</string>
    <string name="enter_here">please enter here</string>
    <string name="thanks">thanks!</string>
    <string name="ending_early_message">If ending early, you won\'t be able to resume tracing. Are you sure?</string>
    <string name="tutorial">Tutorial</string>

    <!-- Profile -->
    <string name="friends">Friends</string>
    <string name="my_drawn_path">My Drawn Paths</string>
    <string name="my_walked_path">My Walked Paths</string>

    <string name="add_friends_plus">+ Add Friend</string>
    <string name="add_friends">Add Friend</string>
    <string name="enter_email">enter friend email here</string>
    <string name="add">Add</string>
    <string name="please_enter_something">please enter something!</string>
    <string name="invalid_trace_user">invalid trace user!</string>
    <string name="to">To: </string>

    <string name="draw_step_1">Step 1: Draw A Path</string>
    <string name="draw_step_2">Step 2: Touch Line To Annotate</string>
    <string name="draw_step_3">Step 3: Send</string>

    <string name="walk_step_1">Step 1: Select A Path</string>
    <string name="walk_step_2">Step 2: Select Duration</string>
    <string name="walk_step_3">Walk</string>

    <string name="please_select_friends">please select friends</string>


    <string name="draw_instruction">Draw anything on the screen provided. The drawing will be sent to your friend(s) to walk. Once you are done, click next.</string>
    <string name="annotation_instruction">Click anywhere on your drawing to add a note for your friend to read while they are on their walk.</string>
    <string name="send_instruction">Select your friend and send your drawing. Your drawing will be translated into a personalized path that they can walk.</string>
    <string name="select_drawing_instruction">Choose a path you would like to walk by pressing on any of the drawings in the list below.</string>
    <string name="set_duration_instruction">Set the duration of your walk by selecting one of the time options below.</string>

    <!-- Term of service -->
    <string name="term_of_service">Term of Service</string>
    <string name="accept">Accept</string>
    <string name="Decline">Decline</string>

    <!-- facebook sdk -->
    <string name="facebook_app_id">1602130093398588</string>

</resources>
