<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Navigation bar -->
    <include layout="@layout/navigation_bar" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/text_password_again"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <TextView
        android:id="@+id/button_sign_up"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_blue_bar_clickable"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sign_up" />

</LinearLayout>