<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan">

    <FrameLayout
        android:id="@+id/drawing_title"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <!-- Panel -->
    <RelativeLayout
        android:id="@+id/map_panel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="0"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text_miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miles_traveled"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/button_show_drawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:text="@string/show_drawing"
            android:textColor="@drawable/text_clickable"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/button_show_trace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:text="@string/show_trace"
            android:textColor="@drawable/text_clickable"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/button_ending_early"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:text="@string/ending_early"
            android:textColor="@drawable/text_clickable"
            android:visibility="visible" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/showing_drawing_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/map_panel"
        android:layout_below="@id/drawing_title" />


</RelativeLayout>
